# learning_feedback_linearization

./: .gitignore  LICENSE  README.md  install_requirements.bash  packages_needed.txt  setup.py
docker/: Dockerfile
learning_fbl/: CMakeLists.txt  package.xml  requirements.txt  setup.py
ros/: run_instructions.txt
ros/src/baxter_learning_msgs/: CMakeLists.txt  package.xml
ros/src/baxter_learning_msgs/msg/: DataLog.msg  Reference.msg  State.msg
ros/src/quads/: CMakeLists.txt  package.xml
ros/src/quads/bagfiles/: recording_2019-07-09-14-45-26.bag  recording_2019-07-09-14-45-38.bag  recording_2019-07-09-14-50-27.bag  recording_2019-07-09-14-55-48.bag  recording_2019-07-09-14-57-42.bag  recording_2019-07-09-15-04-49.bag  recording_2019-07-09-15-06-03.bag  recording_2019-07-09-15-09-04.bag  recording_2019-07-09-15-11-48.bag  recording_2019-07-09-15-12-31.bag  recording_2019-07-09-15-14-16.bag  recording_2019-07-09-15-14-32.bag  recording_2019-07-09-15-15-55.bag  recording_2019-07-09-15-18-17.bag  recording_2019-07-09-15-19-53.bag  recording_2019-07-09-15-38-37.bag  recording_2019-07-09-15-40-36.bag  recording_2019-07-12-14-45-00.bag
ros/src/quads/exec/: control_integrator_node.cpp  output_smoother_node.cpp  output_smoother_test.cpp  reference_generator_node.cpp  simulator_14d_node.cpp  state_estimator_node.cpp  takeoff_controller_node.cpp
ros/src/quads/include/quads/: control_integrator.h  output_smoother.h  polynomial_fit.h  quadrotor12d.h  quadrotor14d.h  reference_generator.h  scalar_output_smoother.h  simulator_14d.h  state_estimator.h  takeoff_controller.h  tf_parser.h  types.h
ros/src/quads/launch/: hw.launch  hw_nolearning.launch  sw.launch  sw_nolearning.launch
ros/src/quads/src/: control_integrator.cpp  data_collector.py  data_collector_node.py  data_plotter.py  dynamics.py  feedback_linearizing_controller.py  feedback_linearizing_controller_node.py  learned_controller.py  output_smoother.cpp  ppo_node.py  quadrotor12d.cpp  quadrotor14d.cpp  quadrotor_14d.py  quadrotor_14d_env.py  reference_generator.cpp  scalar_output_smoother.cpp  simulator_14d.cpp  state_estimator.cpp  system_identifier.py  system_identifier_node.py  takeoff_controller.cpp  tf_parser.cpp
ros/src/quads/src/quadrotor_14d_env/: setup.py
ros/src/quads/src/quadrotor_14d_env/quadrotor_14d_env/: __init__.py
ros/src/quads/src/quadrotor_14d_env/quadrotor_14d_env/envs/: __init__.py  quadrotor_14d_env.py
ros/src/quads/src/quadrotor_14d_hw_env/: setup.py
ros/src/quads/src/quadrotor_14d_hw_env/quadrotor_14d_hw_env/: __init__.py
ros/src/quads/src/quadrotor_14d_hw_env/quadrotor_14d_hw_env/envs/: __init__.py  quadrotor_14d_hw_env.py
ros/src/quads_msgs/: CMakeLists.txt  package.xml
ros/src/quads_msgs/msg/: AuxiliaryControl.msg  Control.msg  LearnedParameters.msg  Output.msg  OutputDerivatives.msg  State.msg  Transition.msg
sandbox/: actorcritic.py  box_constraint.py  constraint.py  demo_diff_drive.py  demo_quadrotor_12d.py  demo_quadrotor_14d.py  diff_drive.py  double_pendulum.py  dynamics.py  logger.py  (+23 more)
(+102 files in other folders)
