<?xml version="1.0"?>
<package>
  <name>quads</name>
  <version>0.0.0</version>
  <description>The quads package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <author email="westenbroekt@eecs.berkeley.edu">Tyler Westenbroek</author>
  <author email="emazumdar@eecs.berkeley.edu">Eric Mazumdar</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>crazyflie_msgs</build_depend>
  <build_depend>crazyflie_utils</build_depend>
  <build_depend>quads_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>crazyflie_msgs</run_depend>
  <run_depend>crazyflie_utils</run_depend>
  <run_depend>quads_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
</package>
