<?xml version="1.0"?>
<package>
  <name>quads_msgs</name>
  <version>0.0.0</version>
  <description>The quads_msgs package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <author email="westenbroekt@eecs.berkeley.edu">Tyler Westenbroek</author>
  <author email="emazumdar@eecs.berkeley.edu">Eric Mazumdar</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
